# mobility-resilience-weather

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
notebooks/: 01_explore.py  02_causal.py  03_equity.py  04_ml.py
src/data/: config.py  download_tlc.py  download_weather.py  merge.py
src/features/: build_features.py
src/models/: causal_did.py  equity.py  predict.py
src/visualization/: plot.py
tests/: test_data_quality.py
