[project]
name = "mobility-resilience-weather"
version = "0.1.0"
description = "Analyzing NYC rideshare resilience under extreme weather events"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.44",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "folium>=0.16",
    "contextily>=1.3",
    "pytest>=8.0",
    "python-dotenv>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
